Fix alignment bug with video removal.

--- a/src/styles/6.components/template/page.landing-page/landing-page-steps.scss
+++ b/src/styles/6.components/template/page.landing-page/landing-page-steps.scss
@@ -120,6 +120,7 @@
 
         &.active {
           display: flex;
+          flex-direction: column;
 
           &:empty {
             display: none !important;
